# Atoms-Simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  installer.wxs
.github/workflows/: c-cpp.yml  codeql.yml
media/: RECORDING_GUIDE.md
src/: atom.cpp  atom_excitation.cpp  atom_raytracer.cpp  atom_realtime.cpp  launcher.cpp  orbital_math.h  schrodinger.py  wave_atom_2d.cpp
src/file_saves/: 2D_bohr_rutherford.cpp  orbital_visualizer_raw.cpp  raw_3d_generation.cpp
src/orbitals/: orbital_n1_l0_m0.json  orbital_n2_l1_m0.json  orbital_n2_l1_m1.json  orbital_n3_l2_m-1.json  orbital_n3_l2_m0.json  orbital_n3_l2_m2.json  orbital_n3_l2_m2_complex.json  orbital_n4_l1_m0.json  orbital_n4_l2_m0.json  orbital_n4_l2_m2.json  orbital_n4_l3_m2.json  orbital_n6_l4_m1.json  orbital_n7_l4_m0.json
src/orbitals_dynamic/: orbital_n2_l1_m0.json  orbital_n6_l4_m1.json
tests/: test_orbital_math.cpp
z_saves/: 2D_blank.cpp  3d_fluid_density.cpp  README.md  atom.cpp  fluid_density.cpp  raw_visualizer.cpp  raytracing_attempt.cpp  save.cpp  save2.cpp  save3.cpp  wtf.cpp
